src/test/deca/context/invalid/expr_cast_int_to_Object.deca
// Test de la règle (3.39) : on ne peut pas cast de int vers Object.
{
	Object var1;
	int var2;
	var1 = (Object)(var2);
}

// Résultat :
//# a
